kustomizations/streaming/seerr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  labels:
    type: LoadBalancer
spec:
  selector:
    app: seerr
    app.kubernetes.io/name: seerr
    app.kubernetes.io/part-of: streaming-stack
  ports:
  - name: http
    port: 5055
    targetPort: 5055
